feat: add todo feature for minimal version
