# apps/api/src/main/java/com/growtogether/todo/TodoController.java
@@ -1,0 +1,61 @@
+package com.growtogether.todo;
+
+import java.util.Map;
+
+import org.springframework.http.HttpStatus;
+import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.GetMapping;
+import org.springframework.web.bind.annotation.DeleteMapping;
+import org.springframework.web.bind.annotation.PutMapping;
+import org.springframework.web.bind.annotation.PathVariable;
+import org.springframework.web.bind.annotation.PostMapping;
+import org.springframework.web.bind.annotation.RequestBody;
+import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
+import org.springframework.web.bind.annotation.RestController;
+
+import com.growtogether.todo.dto.TodoRequest;
+import com.growtogether.todo.dto.TodoResponse;
+
+import jakarta.validation.Valid;
+import lombok.RequiredArgsConstructor;
+
+import java.time.LocalDate;
+import java.util.List;
+import org.springframework.format.annotation.DateTimeFormat;
+
+@RestController 
+@RequestMapping("/api/v1/todos")
+@RequiredArgsConstructor 
+public class TodoController {
+    private final TodoService todoService;
+
+    @PostMapping
+    public ResponseEntity<Map<String, String>> createTodo(@Valid @RequestBody TodoRequest request) {
+        todoService.create(request);
+        return ResponseEntity.status(HttpStatus.CREATED).body(Map.of("message", "Todo created Successful"));
+    }
+
+    @GetMapping 
+    public ResponseEntity<List<TodoResponse>> getTodos(
+            @RequestParam @DateTimeFormat(iso = DateTimeFormat.ISO.DATE) LocalDate date) {
+        return ResponseEntity.ok(todoService.getTodos(date));
+    }
+
+    @GetMapping("/{id}")
+    public ResponseEntity<TodoResponse> getTodo(@PathVariable Long id) {
+        return ResponseEntity.ok(todoService.getTodo(id));
+    }
+
+    @PutMapping("/{id}")
+    public ResponseEntity<TodoResponse> updateTodo(
+            @PathVariable Long id, @Valid @RequestBody TodoRequest request) {
+        return ResponseEntity.ok(todoService.updateTodo(id, request));
+    }
+
+    @DeleteMapping("/{id}")
+    public ResponseEntity<Void> deleteTodo(@PathVariable Long id) {
+        todoService.deleteTodo(id);
+        return ResponseEntity.noContent().build();
+    }
+}
